# Teaine-Ruler

./: .gitignore  .gitmodules  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
app/: __main__.py
app/api/routes/: base_prompt.py  corpus.py
app/core/: __init__.py  config.py
app/core/base_prompt/: __init__.py
app/core/corpus/: __init__.py
app/data/base_prompt/: 猫娘示例.txt
app/models/: base_prompt.py  corpus.py
app/models/db/: __init__.py  common.py  generation.py  history.py  interaction.py  scene.py  user.py
app/utils/: __init__.py  config.py  db.py  log.py
