[tool.poetry]
name = "teaine-ruler"
version = "0.1.0"
description = "The resource manager backend of Project Teaine."
authors = ["Nranphy <Nranphy@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.31.1"}
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
